// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor.Relative /> should match snapshot 1`] = `
<div>
  <a
    class="css-ho3rmb"
    href="/bob"
  >
    link
  </a>
</div>
`;

exports[`<Anchor.Relative /> should render with no decoration 1`] = `
<div>
  <a
    class="css-1hqxz2g"
    href="#"
  >
    link
  </a>
</div>
`;
